# controllers/user.js
@@ -67,14 +67,7 @@ const updateUser = async (req, res, next) => {
     const userId = new ObjectId(req.params.id)
     let hashedPassword = await bcrypt.hashSync(req.body.password, 10)
     const newUser = {
-      firstName: req.body.firstName,
-      lastName: req.body.lastName,
-      email: req.body.email,
-      gender: req.body.gender,
-      birthday: req.body.birthday,
-      password: await bcrypt.hashSync(req.body.password, 10),
-      city: req.body.city,
-      country: req.body.country
+ 
     }
     const response = await userModel.updateUser(mongodb, userId, newUser);
     if (response.modifiedCount > 0) {
