# routes/index.js
@@ -1,6 +1,10 @@
 const express = require('express');
 const router = express.Router();
 const authController = require('../controllers/auth')
+const userRouter = require('./user');
+const dbRouter =require('./mongoDB');
+const nodeRouter = require('./node');
+const renderRouter = require('./render');
 
 router.get('/login', authController.authenticateWithGoogle);
 
@@ -8,17 +12,23 @@ router.get('/google/callback',
     authController.handleGoogleCallback
 );
 
+router.post('/login',
+    authController.handleLocalAuthentication
+)
+
 router.get('/logout', (req, res, next) => {
-    res.logout()
+    res.clearCookie('jwt')
+    delete res.locals.user
+    delete res.locals.loggedin
+    res.redirect('/')
 })
- 
-const userRouter = require('./user');
-const dbRouter =require('./mongoDB');
-const nodeRouter = require('./node');
-const renderRouter = require('./render');
 
 router.get('/', (req, res) => {
-    res.send('HOMEPAGE')
+    if (res.locals.loggedin) {
+        res.send(`Logged in as ${res.locals.user.firstName}.`);
+    } else {
+        res.send('Logged out.');
+    }
 });
 
 router.use('/users', userRouter);
